[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credactor"
version = "2.3.3"
description = "Scan and redact hardcoded credentials in source code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Rx" },
]
keywords = ["security", "credentials", "secrets", "scanner", "redactor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
encoding = ["charset-normalizer>=3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
credactor = "credactor.cli:main"

[project.urls]
Repository = "https://github.com/rxb06/Credactor"

[tool.setuptools.packages.find]
include = ["credactor*"]
exclude = ["mydocs*", "tests*", "scripts*", "examples*", "hooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF", "PERF"]
# RUF003: ambiguous-unicode (en dashes) in comments is intentional house style.
# (C90/S/N deferred — see code-review-pass2 finding 3.10.)
ignore = ["RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests routinely unpack multi-value returns (e.g. walk_and_scan's 4-tuple) and
# ignore fields they don't assert on.
"tests/**" = ["RUF059"]

[tool.mypy]
python_version = "3.11"
files = ["credactor"]
# charset_normalizer / chardet are optional, lazily-imported deps with no stubs.
ignore_missing_imports = true
