[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credactor"
version = "2.3.3"
description = "Scan and redact hardcoded credentials in source code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Rx" },
]
keywords = ["security", "credentials", "secrets", "scanner", "redactor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
encoding = ["charset-normalizer>=3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
credactor = "credactor.cli:main"

[project.urls]
Repository = "https://github.com/rxb06/Credactor"

[tool.setuptools.packages.find]
include = ["credactor*"]
exclude = ["mydocs*", "tests*", "scripts*", "examples*", "hooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "SIM", "RUF", "PERF",
    # Regression guards for the style-plan fixes (no current violations):
    "UP035",    # deprecated typing imports — use collections.abc (P7 #69, P8 #20)
    "FURB105",  # empty-string print (P2 #18)
    "PLW0108",  # unnecessary lambda in default_factory (P1 #50)
    # Complexity guards — generous limits (see mccabe/pylint below):
    "C901", "PLR0912", "PLR0915",
]
# RUF003: ambiguous-unicode (en dashes) in comments is intentional house style.
ignore = ["RUF003"]

[tool.ruff.lint.mccabe]
# Generous ceiling: the scanner/redactor have a few inherently branchy functions
# (current worst cyclomatic complexity is 23). This guards against further growth.
max-complexity = 25

[tool.ruff.lint.pylint]
max-branches = 25     # current worst: 24
max-statements = 90   # current worst: 88

[tool.ruff.lint.per-file-ignores]
# Tests routinely unpack multi-value returns (e.g. walk_and_scan's 4-tuple) and
# ignore fields they don't assert on.
"tests/**" = ["RUF059"]

[tool.mypy]
python_version = "3.11"
files = ["credactor"]
strict = true
# charset_normalizer / chardet are optional, lazily-imported deps with no stubs.
ignore_missing_imports = true
