[build-system]
# >=77: first release that accepts the PEP 639 SPDX string `license` below —
# building with 68-76 fails on "invalid pyproject.toml config: project.license".
# "wheel" is omitted: setuptools >=70.1 builds wheels itself.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "credactor"
# Single-sourced from credactor/__init__.py (see [tool.setuptools.dynamic]) so
# a release bump cannot leave pip metadata and `credactor --version` disagreeing.
dynamic = ["version"]
description = "Scan and redact hardcoded credentials in source code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Rx" },
]
keywords = ["security", "credentials", "secrets", "scanner", "redactor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
encoding = ["charset-normalizer>=3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "coverage[toml]>=7.0",
]

[project.scripts]
credactor = "credactor.cli:main"

[project.urls]
Repository = "https://github.com/rxb06/credactor"
Issues = "https://github.com/rxb06/credactor/issues"
Changelog = "https://github.com/rxb06/credactor/blob/main/CHANGELOG.md"
Documentation = "https://github.com/rxb06/credactor/blob/main/docs/manual.md"

[tool.setuptools.dynamic]
version = {attr = "credactor.__version__"}

[tool.setuptools.packages.find]
include = ["credactor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
# Match the codebase's house style; enforced check-only via `ruff format --check`
# in CI and pre-commit (no auto-rewrite in those gates).
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "SIM", "RUF", "PERF",
    # Regression guards for the style-plan fixes (no current violations):
    "UP035",    # deprecated typing imports — use collections.abc (P7 #69, P8 #20)
    "FURB105",  # empty-string print (P2 #18)
    "PLW0108",  # unnecessary lambda in default_factory (P1 #50)
    # Complexity guards — generous limits (see mccabe/pylint below):
    "C901", "PLR0912", "PLR0915",
]
# RUF003: ambiguous-unicode (en dashes) in comments is intentional house style.
ignore = ["RUF003"]

[tool.ruff.lint.mccabe]
# Generous ceiling: the scanner/redactor have a few inherently branchy functions
# (current worst cyclomatic complexity is 24, scan_line). Guards further growth.
max-complexity = 25

[tool.ruff.lint.pylint]
max-branches = 25     # current worst: 24 (batch_replace_in_file)
max-statements = 90   # current worst: 86 (batch_replace_in_file)

[tool.ruff.lint.per-file-ignores]
# Tests routinely unpack multi-value returns (e.g. walk_and_scan's 4-tuple) and
# ignore fields they don't assert on.
"tests/**" = ["RUF059"]

[tool.mypy]
python_version = "3.11"
# Pin the check platform: typeshed's fcntl stub is empty under win32, so an
# unpinned mypy on a Windows runner errors on redactor.py's lazy fcntl use
# (the runtime ImportError guard isn't narrowing mypy understands). One
# platform keeps the type-check deterministic across the CI matrix.
platform = "linux"
files = ["credactor", "scripts"]
strict = true
# Scope the missing-import exemption to the optional encoding detector
# (charset_normalizer, resolved once at credactor.utils import) — a blanket
# ignore_missing_imports would silently treat any accidental new import as
# untyped.
[[tool.mypy.overrides]]
module = ["charset_normalizer", "charset_normalizer.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["credactor"]
